--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
+#--------------------------------------------------------------------
+#created by Rizky Adi Ryanto
+#--------------------------------------------------------------------
+
 CI_ENVIRONMENT = development
 
 #--------------------------------------------------------------------
